# roundtable-messaging

./: .gitignore  AGENTS.md  CREDITS.md  LICENSE  NOTICE  PROVENANCE.md  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  release-artifact.yml
docs/: architecture.md  compatibility.md  install.md  legacy-v1-keyboard.md  release.md  rt-codex-phase3.md  wp21-quiet-ack-nudge-retirement.md
docs/provenance/: README.md  source-commits.tsv
integrations/hermes/roundtable/: __init__.py  plugin.yaml
roundtable_packaging/: __init__.py  cli.py  migrate.py  setup.py  smoke.py
scripts/: build_release.py  check_public_safety.py  install.sh  smoke_no_cmux.py  uninstall.sh
skills/shared/roundtable/: SKILL.md
templates/: AGENTS.md.tmpl  BRIEF.md.tmpl  CLAUDE.md.tmpl  HERMES.md.tmpl  README.md.tmpl  ROUTING.md.tmpl  agents.yaml.tmpl  decision.md.tmpl  root-gitignore.tmpl  roundtable-gitignore.tmpl
tests/: conftest.py  test_codex_service_preflight.py  test_harness_setup.py  test_hermes_adapter.py  test_legacy_migration.py  test_no_cmux.py  test_no_cmux_smoke.py  test_optional_cmux_adapter.py  test_packaging.py  test_public_safety.py  test_release_artifact.py  test_roundtable_cli.py  test_roundtable_init.py  test_rt_codex.py  test_rt_codex_auto_bind.py  test_rt_codex_lease.py  test_rt_doctor_diagnostics.py  test_rt_doctor_lease.py  test_rt_launcher_lease.py  test_rt_runtime.py  test_rt_runtime_concurrency.py  test_rt_tooling.py  test_rt_tripwire_runtime.py  test_rt_wp4.py  test_terminal_smoke.py
